infra/base/kube-state-metrics/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: kube-state-metrics
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 10%
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/metrics'
      labels:
        test: "v1.7"
    spec:
      automountServiceAccountToken: true
      containers:
        - name: kube-state-metrics
          args:
            - --resources=pods,nodes,services,deployments,namespaces
          image: registry.k8s.io/kube-state-metrics/kube-state-metrics:v2.15.0
          ports:
            - containerPort: 8080
              name: http-metrics
            - containerPort: 8081
              name: telemetry
          securityContext:
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            runAsUser: 65534
            seccompProfile:
              type: RuntimeDefault
          resources: { }
          volumeMounts: [ ]
      volumes: [ ]
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: kube-state-metrics
